WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220540
REGRESSION(
r271341
): media/media-fullscreen-inline.html times out on GTK
https://bugs.webkit.org/show_bug.cgi?id=220540
Summary
REGRESSION(r271341): media/media-fullscreen-inline.html times out on GTK
Philippe Normand
Reported
2021-01-12 04:41:03 PST
Potentially because GTK doesn't support VIDEO_PRESENTATION_MODE yet. When I run this locally the <video> becomes visible on my desktop, which is very suspicious, because the test harness runs in XvFB...
Attachments
Patch
(8.82 KB, patch)
2021-05-05 07:30 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(8.93 KB, patch)
2021-05-05 08:15 PDT
,
Philippe Normand
calvaris
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-01-12 04:44:30 PST
Expectation updated in
r271400
Philippe Normand
Comment 2
2021-05-05 07:30:11 PDT
Created
attachment 427765
[details]
Patch
Philippe Normand
Comment 3
2021-05-05 08:15:48 PDT
Created
attachment 427767
[details]
Patch
EWS
Comment 4
2021-05-06 04:04:59 PDT
Tools/Scripts/svn-apply failed to apply
attachment 427767
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Philippe Normand
Comment 5
2021-05-06 04:12:05 PDT
Committed
r277080
(
237383@main
): <
https://commits.webkit.org/237383@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug